# FISim

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  Edge_Data.json  README.md  batch_test  exec  mobility_test_on.csv  process.py  tcp-socket-base.puml
FIA/: CMakeLists.txt
FIA/CCN/: content.txt  simulator.cc
FIA/Cybertwin/: applications.yaml  simulator.cc  simulator.h  topology.yaml
build-support/: macros-and-definitions.cmake
contrib/cybertwin/model/: cybertwin.cc
cybertwin/: CMakeLists.txt  CybertwinSim.cc  CybertwinSim.h  MultiStreamProtocol.puml  config.json  cybertwin  cybertwin-topology.cc  cybertwin-topology.h  main.cc  topology.json  utils.h  version2.cc  version3.cc  versionV1.cc
cybertwin/system/: topology.json
future-arch/: CMakeLists.txt  lte-test.cc  uan-test.cc
future-arch/Cybertwin/: CMakeLists.txt  applications.yaml  simulator.cc  simulator.h  topology.yaml
log/multipath/: mulpath-test.plt
log/multipath/background/: mulpath-test.plt
scratch/: mac.ccert  mobility_test.cc  mptcp.cc  scalability_test.cc  test-end-to-edge.cc  test-multisocket.cc  user.ccert
src/aodv/model/: aodv-routing-protocol.cc  aodv-routing-protocol.h
src/applications/: CMakeLists.txt
src/applications/model/: ccn-consumer-app.cc  (+11 more)
src/cybertwin/: CMakeLists.txt
src/internet/: CMakeLists.txt
src/nix-vector-routing/: CMakeLists.txt
src/topology-read/: CMakeLists.txt
utils/: fisim-mobility-test.sh  fisim-scalability-test-process.sh  fisim-scalability-test.sh  mobility-test-plot.gp  mobility_test_off.csv  mobility_test_on.csv  scalability_plot.gp
(+159 files in other folders)
